Reverted nginx config to port 80
Updated index template

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
     <section id="main">
         <div class="container">
             <span class="icon solid major fa-cloud"></span>
-            <h1>Hi, I'm <strong>{{ instance_id }}</strong> on <strong>{{ region }}</strong> accessed from <strong>host: {{ host }}:{{ real_port }} </strong> , EC2 instance running flask and nginx to serve you this slightly better looking page</p>
+            <h1>Hi, I'm <strong>{{ instance_id }}</strong> on <strong>{{ region }}</strong> accessed from <strong>host: {{ host }} </strong> reached from NLB port:<strong>{{ real_port }}</strong> , EC2 instance running flask and nginx to serve you this slightly better looking page</p>
         </div>
     </section>
 
